--- a/build.gradle
+++ b/build.gradle
@@ -37,6 +37,8 @@ dependencies {
 	compile("org.springframework:spring-jdbc")
 	compile("com.h2database:h2")
 
+	compile("mysql:mysql-connector-java:6.0.5")
+
 	testCompile("junit:junit")
 	testCompile('org.springframework.boot:spring-boot-starter-test')
 }
