--- a/build.gradle
+++ b/build.gradle
@@ -35,9 +35,9 @@ dependencies {
 	compile 'io.springfox:springfox-swagger2:2.6.+'
 	compile 'org.projectlombok:lombok:1.+'
 	compile("org.springframework:spring-jdbc")
-	compile("com.h2database:h2")
+	//compile("com.h2database:h2")
 
-	compile("mysql:mysql-connector-java:6.0.5")
+	compile("mysql:mysql-connector-java:5.1.39")
 
 	testCompile("junit:junit")
 	testCompile('org.springframework.boot:spring-boot-starter-test')
