Updates for homework 3

--- a/ebank-service-router/build.gradle
+++ b/ebank-service-router/build.gradle
@@ -41,6 +41,8 @@ dependencies {
 
 	compile('org.springframework.cloud:spring-cloud-starter-ribbon')
 
+	compile("javax.validation:validation-api:1.+")
+
 	testCompile("junit:junit")
 	testCompile('org.springframework.boot:spring-boot-starter-test')
 }
